@@ -1,5 +1,10 @@
 2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* timer/timer.c: Eliminate empty function from every benchmark timer
+	driver. Fix spelling.
+
+2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* timer/timer.c: Rename timer driver methods to follow RTEMS
 	programming conventions.
 
